src/styles/globals.scss
/* ... */
/* Add another point after the progress bar */
.stream-player__progress-bar::after {
  /* Set the position to absolute */
  position: absolute;
  /* Set the content to a star icon */
  content: '\2605';
  /* Set the font size to 12px */
  font-size: 12px;
  /* Set the color to yellow */
  color: yellow;
  /* Set the right position to 20% of the progress bar width */
  right: 20%;
  /* Set the top position to 50% of the progress bar height */
  top: 50%;
  /* Adjust the position with transform */
  transform: translate(50%, -50%);
}

.required {
  &:after {
    content: '*';
    position: relative;
    font-size: inherit;
    color: #d35563;
    padding-left: 0.25rem;
    font-weight: 700;
  }
}

.sapp-hover-device-item:hover {
  .sapp-logo {
    @apply border-primary bg-secondary;
  }

  .logo {
    fill: #ffb800;
  }
}

.sapp-disable-button {
  position: relative;

  ::after {
    content: '';
    @apply bg-gray-3;
    // background: white;
    opacity: 0.6;
    width: calc(100% - 2px);
    height: 100%;
    position: absolute;
    left: 1px;
  }
}

.sapp-separateLine :not(:last-child) {
  @apply border-b border-gray-4;
}

.active {
  .word_icon path {
    fill: #295496;
  }

  .excel_icon path {
    fill: #1d5d36;
  }
}

.word_icon path {
  fill: #dcdddd;
}

textarea.is-invalid:focus {
  --tw-ring-color: #d35563;
  --tw-ring-offset-color: #d35563;
}

@layer utilities {
  .grid-fit-content {
    grid-template-columns: min-content 1fr;
  }
}

.min-w-\[63px\] {
  min-width: 63px;
}

.max-w-40 {
  max-width: 10rem;
}

.hover-transition-font-weight {
  transition: font-weight 0.1s ease;
}

.ant-tooltip-inner {
  color: #404041 !important;
  max-width: 600px;
  width: max-content;
}

.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item {
  padding: 12px 8px !important;
}

.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item:hover {
  background-color: #fffaf0 !important;
}

.ant-dropdown .ant-dropdown-menu {
  padding: 8px !important;
  border-radius: 0px !important;
}

.ant-dropdown-menu-item:hover .ant-dropdown-menu-title-content li span {
  color: #ffb800;
}

.learningOutcome-description {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    display: block !important;
    font-weight: bold !important;
  }
  h1 {
    font-size: 2em !important;
  }
  h2 {
    font-size: 1.5em !important;
  }
  h3 {
    font-size: 1.17em !important;
  }
  h5 {
    font-size: 0.83em !important;
  }
  h6 {
    font-size: 0.67em !important;
  }
  pre {
    display: block !important;
    font-family: monospace !important;
    white-space: pre !important;
  }
  p {
    display: block;
    font-size: 14px;
  }
}

.ant-modal .ant-modal-content {
  border-radius: 0px !important;
}

.sapp-modal .ant-modal-content {
  padding: 70px 76px !important;
  width: 614px;
}

.sapp-modal .ant-modal-content .ant-modal-header .ant-modal-title {
  @apply text-bw-1 font-semibold text-4xl;
}

.ant-modal-root .ant-modal-wrap {
  @apply bg-bw-10;
}

.lf-player-container {
  height: inherit;
  @apply flex justify-center items-center;
}

// Animate the size, inside
.secondary:hover,
// .secondary:focus,
.primary:hover {
  box-shadow: inset 0 0 0 2em var(--hover);
}

$colors: (
  secondary: white,
  primary: #ffd81b,
);

$hover: (
  secondary: #ffb800,
  primary: #ffc83a,
);

$focus: (
  primary: #ffb800,
);

// Sass variables compile to a static string; CSS variables are dynamic and inherited
// Loop through the map and set CSS custom properties using Sass variables
@each $button, $color in $colors {
  .#{$button} {
    --color: #{$color};
    --hover: #{map-get(
        $hover,
        $button
      )}; // Sử dụng màu hover tương ứng với mỗi button
    transition: background-color 0.3s ease; // Hiệu ứng transition cho màu nền
  }

  .#{$button}:hover {
    --color: map-get(
      $hover,
      $button
    ); // Sử dụng màu hover tương ứng với mỗi button khi hover hoặc focus
  }
}

// Now every button will have different colors as set above. We get to use the same structure, only changing the custom properties.
.secondary {
  color: #404041;
  transition: 0.25s;
  @apply bg-gray-3;

  &:hover {
    @apply text-white;
  }
}

.primary {
  transition: 0.25s;
  @apply bg-primary text-white;

  &:hover {
    @apply text-white;
  }
}

.ant-drawer .ant-drawer-body {
  padding: 0 !important;
}

.sapp-notifcation.text-bw-1 a:hover {
  @apply text-primary;
}

.ant-drawer {
  position: unset;
}

.ant-drawer .ant-drawer-mask,
.ant-drawer .ant-drawer-mask,
.ant-drawer .ant-drawer-content-wrapper {
  position: fixed;
  background-color: #000000cc;
}

.shadow-activity.aos-init.aos-animate {
  transform: none !important;
}

textarea:focus {
  --tw-ring-color: #ffb800;
}

.button-icon {
  transition: 0.25s;

  &:hover {
    @apply bg-primary-2;
  }
}

:where(.css-dev-only-do-not-override-1xg9z9n).ant-modal {
  font-family: 'Roboto' !important;
}

p a {
  @apply text-blue-1 underline;
}

.ant-dropdown {
  z-index: 2000 !important;
}

.ant-tooltip .ant-tooltip-inner {
  padding: 10px 12px !important;
}

#floating-button {
  @apply w-[60px] h-[60px] bg-white fixed cursor-pointer rounded-full;
  box-shadow:
    rgba(0, 0, 0, 0.1) 0px 1px 4px,
    rgba(0, 0, 0, 0.2) 0px 2px 12px;
}

.sapp-pinned-noti-header {
  padding: 12px 24px 12px 233px;
  background: #18355d;
}

.sapp-pinned-noti-header {
  padding: 12px 24px 12px 233px;
  @apply bg-bw-1;
}

@keyframes moveDown {
  0% {
    transform: translateY(-100%);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

.plus {
  animation: plus-out 0.3s;
  transition: all 0.3s;
  @apply w-[60px] h-[60px] left-[-2px];
}

#container-floating {
  @apply fixed w-[60px] h-[60px] bottom-[30px] right-[20px] z-[50px];
}
/* ... */

